Added working buttons, just need to make a game pretty

--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="javascript.js" defer></script>
+    <title>Document</title>  
 </head>
 <body>
+    <button id="rock">Rock</button> 
+    <button id="paper">Paper</button> 
+    <button id="scissors">Scissors</button> 
+    <div class="result">Human: <span id="humanScore">0</span> vs Computer: <span id="computerScore">0</span></div>
     
 </body>
+
 </html>
+<script src="javascript.js"></script>
 
 
