--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>  
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button id="rock">Rock</button> 
-    <button id="paper">Paper</button> 
-    <button id="scissors">Scissors</button> 
-    <div class="result">Human: <span id="humanScore">0</span> vs Computer: <span id="computerScore">0</span></div>
-    
+    <div class="result">Player: <span id="humanScore">0</span></div>
+    <div class="container">
+        <button id="rock">Rock</button> 
+        <button id="paper">Paper</button> 
+        <button id="scissors">Scissors</button>
+    </div> 
+    <div class="game">Play a game</div>
+    <div><button id="computerChoice"></button></div>
+    <div class="result">Computer: <span id="computerScore">0</span></div>
 </body>
 
 </html>
